<resources>
    <string name="app_name">Rollover</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="main_fragment_label">Main Fragment</string>
    <string name="add_category_fragment_label">Add Category Fragment</string>
    <string name="category_screen_fragment_label">Category Screen Fragment</string>
    <string name="add_expense_screen_fragment_label">Add Expense Screen Fragment</string>

    <string name="color">Color</string>
    <string name="biweekly">Biweekly</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="expectation">Expectation</string>
    <string name="name">Name</string>
    <string name="rollover_period">Rollover Period</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="threshold">Threshold</string>
    <string name="cancel">Cancel</string>
    <string name="percent_sign">%</string>
    <string name="save">Save</string>
    <string name="addCategory">Add Category</string>
    <string name="rollover">Rollover</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="summary">Summary</string>
    <string name="add_expense">Add Expense</string>
<!--    <string name="name">Name</string>-->
    <string name="debit">Debit</string>
    <string name="credit">Credit</string>
    <string name="account">Account</string>
    <string name="amount">Amount</string>
    <string name="available">Available</string>
    <string name="spent">Spent</string>
    <string name="rolled_over">Rolled over</string>
    <string name="dollar_sign">$</string>
    <string name="category_here">CategoryHere</string>

    <string-array name="colors">
        <item>Red</item>
        <item>Orange</item>
<!--        <item>Yellow</item>-->
        <item>Green</item>
        <item>Blue</item>
        <item>Purple</item>
    </string-array>

</resources>