<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="addExpenseViewModel"
            type="com.ijsbss.rollover.addExpense.AddExpenseFragmentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/add_category_header"
            android:layout_width="0dp"
            android:layout_height="68dp"
            android:background="#D0A197"
            android:paddingTop="5sp"
            android:paddingBottom="5sp"
            android:text="@string/add_expense"
            android:textAlignment="center"
            android:textColor="#0E0E0E"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/expense_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:text="@string/name"
            android:textColor="#000000"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_category_header" />

        <EditText
            android:id="@+id/expense_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@={addExpenseViewModel.inputName}"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_category_header" />

        <TextView
            android:id="@+id/expense_amount_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="100dp"
            android:text="@string/amount"
            android:textColor="#000000"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expense_name_label" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="10dp"
            android:text="$"
            android:textColor="#000000"
            android:textSize="25sp"
            app:layout_constraintEnd_toStartOf="@+id/expense_amount"
            app:layout_constraintTop_toBottomOf="@+id/expense_name" />

        <EditText
            android:id="@+id/expense_amount"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="@={addExpenseViewModel.inputAmount}"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expense_name" />

        <TextView
            android:id="@+id/expense_account_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="100dp"
            android:text="@string/account"
            android:textColor="#000000"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expense_amount_label" />

        <Button
            android:id="@+id/credit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="85dp"
            android:layout_marginEnd="25dp"
            android:backgroundTint="#FFFFFF"
            android:text="@string/credit"
            android:textColor="#000000"
            app:layout_constraintEnd_toStartOf="@+id/debit_button"
            app:layout_constraintTop_toBottomOf="@+id/expense_amount" />

        <Button
            android:id="@+id/debit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="85dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="#FFFFFF"
            android:text="@string/debit"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expense_amount" />

        <Button
            android:id="@+id/expense_cancel_button"
            android:layout_width="120dp"
            android:layout_height="57dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="505dp"
            android:text="Cancel"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_category_header" />

        <Button
            android:id="@+id/expense_save_button"
            android:layout_width="120dp"
            android:layout_height="57dp"
            android:layout_marginTop="505dp"
            android:layout_marginEnd="60dp"
            android:text="Save"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_category_header" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>