<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="myViewModel"
            type="com.ijsbss.rollover.MainFragmentViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/category_back"
                android:layout_width="10sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                app:icon="@drawable/ic_back_icon"
                app:iconSize="40dp"
                app:iconTint="#000000" />

            <TextView
                android:id="@+id/category_name_view"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:text="Category Name"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="30sp" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="277dp">

            <TextView
                android:id="@+id/available_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="70dp"
                android:text="@string/available"
                android:textColor="#000000"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/spent_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="70dp"
                android:text="@string/spent"
                android:textColor="#000000"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/available_label" />

            <TextView
                android:id="@+id/rolled_over_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="70dp"
                android:text="@string/rolled_over"
                android:textColor="#000000"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spent_label" />

            <TextView
                android:id="@+id/cat_available_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="28dp"
                android:text="TextView"
                android:textColor="#000000"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cat_spent_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="30dp"
                android:text="TextView"
                android:textColor="#000000"
                android:textSize="28sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cat_available_view" />

            <TextView
                android:id="@+id/rolled_over_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="30dp"
                android:text="TextView"
                android:textColor="#000000"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cat_spent_view" />

            <TextView
                android:id="@+id/category_expectation_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="30dp"
                android:text="@string/expectation"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rolled_over_view" />

            <TextView
                android:id="@+id/cat_expection_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="70dp"
                android:text="TextView"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rolled_over_label" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/add_expense_button"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:height="70dp"
                android:backgroundTint="#DFCBCC"
                android:ellipsize="middle"
                android:translationX="300dp"
                app:cornerRadius="50dp"
                app:icon="@android:drawable/ic_input_add"
                app:iconTint="#202020" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="357dp" />

        </LinearLayout>
    </LinearLayout>
</layout>